# microscopy-tomo-pipeline

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  ReadMe.md  pyproject.toml
.github/workflows/: tests.yml
examples/: example_config.yaml
src/tomo_pipeline/: __init__.py  alignment.py  cli.py  filters.py  io.py  reconstruction.py  segmentation.py  visualization.py
test/: test_alignment.py  test_reconstruction.py  test_segmentation.py
