[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "microscopy-tomo-pipeline"
version = "0.1.0"
description = "Generic microscopy tomography pipeline utilities"
authors = [{ name = "Steve H.", email = "huanghl1108@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-image>=0.22",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "jupyter",
    "pre-commit",
    "black",
    "ruff",
    "isort",
]

[project.scripts]
tomo-pipeline = "tomo_pipeline.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]